...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:animationCache="false"
        android:background="#6CA7C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:text="Price"
                android:textSize="25dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editprice"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:ems="10"
                android:inputType="numberSigned"
                android:maxLength="4" />
...
                android:background="#ffa5a5"
                android:text="Location"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/location_spi"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:entries="@array/residence_arrays"
                android:prompt="@string/residence_prompt" />

...
                android:background="#ffa5a5"
                android:text="Types"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/types_spi"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:entries="@array/types_arrays"
                android:prompt="@string/types_prompt" />

...
                android:layout_height="65dp"
                android:inputType="numberSigned"
                app:counterEnabled="true"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editphonetie"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="#fcdada"
                    android:hint="Phone:"
                    android:inputType="numberSigned"
                    android:textSize="25sp" />
...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editemailtie"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="#fcdada"
                    android:hint="Email:"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="450">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editdescriptie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fcdada"
                    android:hint="Description:"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                app:srcCompat="@drawable/chat_icon2" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#5c969e"
                android:gravity="center_horizontal"
                android:max="3000"
                android:text="Submit"
                android:textAlignment="center"
                android:textSize="40sp" />

        </LinearLayout>


...
